# klassify-svn

trunk/: AUTHORS  Doxyfile  Makefile.in  TODO  configure  configure.in  configure.in.in  klassify.kdevelop  klassify.kdevelop.pcs  klassify.kdevses  tags
trunk/autom4te.cache/: output.0  traces.0
trunk/doc/: Makefile.am  Makefile.in
trunk/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/src/: Makefile.am  Makefile.in  classification_task.cpp  classification_task.h  classifier.cpp  classifier.h  classifier_factory.cpp  classifier_factory.h  dbacl_classifier.cpp  dbacl_classifier.h  dcop_classifier.cpp  dcop_classifier.h  filemanager.cpp  filemanager.h  klassify.cpp  klassify.desktop  klassify.h  klassify.lsm  main.cpp  naive_bayesian_classifier.cpp  naive_bayesian_classifier.h  storage.xml
trunk/templates/: h
